--- a/locales/tr.strings
+++ b/locales/tr.strings
@@ -1,19 +1,19 @@
 "__locale" = "tr_TR.UTF-8;Tur";
 
-%{ Check for https://www.unicode.org/cldr/charts/latest/supplemental/language_plural_rules.html %}
+/* Check for https://www.unicode.org/cldr/charts/latest/supplemental/language_plural_rules.html */
 
-%{ Main page %}
+/* Main page */
 
 "home" = "Ana ekran";
 "welcome" = "Hoşgeldin";
 
-%{ Login %}
+/* Login */
 
 "log_in" = "Giriş yap";
 "password" = "Parola";
 "registration" = "Kayıt";
 
-%{ Profile information %}
+/* Profile information */
 
 "select_language" = "Dil seç";
 "edit" = "dznl";
@@ -36,7 +36,7 @@
 "online" = "Çevrimiçi";
 "was_online" = "çevrimiçiydi";
 "was_online_m" = "çevrimiçiydi"; 
-%{ For male and femail %}
+/* For male and femail */
 
 "was_online_f" = "çevrimiçiydi";
 "all_title" = "Tümü";
@@ -86,7 +86,7 @@
 "favorite_quotes" = "Favori sözler";
 "information_about" = "Hakkında";
 
-%{ Wall %}
+/* Wall */
 
 "post_writes_m" = "yazdı";
 "post_writes_f" = "yazdı";
@@ -110,7 +110,7 @@
 
 "nsfw_warning" = "Bu gönderinin +18 içeriii olabilir";
 
-%{ Friends %}
+/* Friends */
 
 "friends" = "Arkadaşlar";
 "followers" = "Takipçiler";
@@ -136,7 +136,7 @@
 "subscriptions_one" = "$1 abonelik";
 "subscriptions_other" = "$1 abonelik";
 
-%{ Group %}
+/* Group */
 
 "name_group" = "Grup adı";
 "subscribe" = "Abone ol";
@@ -173,7 +173,7 @@
 "meetings_one" = "$1 toplantı";
 "meetings_other" = "$1 toplantı";
 
-%{ Albums %}
+/* Albums */
 
 "create" = "Oluştur";
 "albums" = "Albümler";
@@ -188,7 +188,7 @@
 "albums_one" = "$1 albüm";
 "albums_other" = "$1 albüm";
 
-%{ Notes %}
+/* Notes */
 
 "notes" = "Notlar";
 "note" = "Not";
@@ -201,9 +201,9 @@
 "notes_one" = "$1 not";
 "notes_other" = "$1 not";
 
-%{ Menus %}
+/* Menus */
 
-%{ Note that is string need to fit into the "My Page" link %}
+/* Note that is string need to fit into the "My Page" link */
 
 "edit_button" = "dznl";
 "my_page" = "Sayfam";
@@ -241,7 +241,7 @@
 "footer_choose_language" = "dil seç";
 "footer_privacy" = "gizlilik";
 
-%{ Settings %}
+/* Settings */
 
 "main" = "Ana";
 "contacts" = "Kişiler";
@@ -300,13 +300,13 @@
 "ui_settings_rating_show" = "Göster";
 "ui_settings_rating_hide" = "Gizle";
 
-%{ Sorting %}
+/* Sorting */
 
 "sort_randomly" = "Rastgele sırala";
 "sort_up" = "ID'ye göre yukarı doğru sırayla";
 "sort_down" = "ID'ye göre aşağı doğru sırala";
 
-%{ Videos %}
+/* Videos */
 
 "videos" = "Videolar";
 "video" = "Video";
@@ -324,7 +324,7 @@
 "videos_one" = "$1 video";
 "videos_other" = "$1 video";
 
-%{ Notifications %}
+/* Notifications */
 
 "feedback" = "Geri bildirim";
 "unread" = "Okunmamış";
@@ -354,7 +354,7 @@
 "nt_note_instrumental" = "not";
 "nt_photo_instrumental" = "fotoğraf";
 
-%{ Time %}
+/* Time */
 
 "time_at_sp" = " saat ";
 "time_just_now" = "daha şimdi";
@@ -363,7 +363,7 @@
 "time_today" = "bugün";
 "time_yesterday" = "dün";
 
-%{ Errors %}
+/* Errors */
 
 "error_1" = "Yanlış sorgu";
 "error_2" = "Yanlış kullanıcı adı ve parola";
@@ -375,4 +375,4 @@
 "no_data" = "Veri yok";
 "no_data_description" = "Böyle bir veri yok.";
 
-%{ Translations by @WindowZytch - Çeviriler @WindowZytch'den %}
+/* Translations by @WindowZytch - Çeviriler @WindowZytch'den */
