Error fixed at line 87

--- a/locales/en.strings
+++ b/locales/en.strings
@@ -84,7 +84,7 @@
 
 "interests" = "Interests";
 "favorite_music" = "Favorite music";
-"favorite_films" = "Favorite flims";
+"favorite_films" = "Favorite films";
 "favorite_shows" = "Favorite TV-shows";
 "favorite_books" = "Favorite books";
 "favorite_quotes" = "Favorite quotes";
