--- a/locales/tr.strings
+++ b/locales/tr.strings
@@ -16,7 +16,7 @@
 /* Profile information */
 
 "select_language" = "Dil seç";
-"edit" = "dznl";
+"edit" = "Dznl";
 "birth_date" = "Doğum tarihi";
 "registration_date" = "Kayıt tarihi";
 "hometown" = "Memleket";
