--- a/locales/by_lat.strings
+++ b/locales/by_lat.strings
@@ -17,7 +17,7 @@
 /* Profile information */
 
 "select_language" = "Abrać movu";
-"edit" = "redahavać";
+"edit" = "Redahavać";
 "birth_date" = "Dzień narodzinaŭ";
 "registration_date" = "Data rejestracyi";
 "hometown" = "Rodny horad";
