--- a/locales/pl.strings
+++ b/locales/pl.strings
@@ -17,7 +17,7 @@
 /* Profile information */
 
 "select_language" = "Wybierz język";
-"edit" = "redagować";
+"edit" = "Redagować";
 "birth_date" = "Urodziny";
 "registration_date" = "Data rejestracji";
 "hometown" = "Miasto rodzinne";
